--- a/bower.json
+++ b/bower.json
@@ -2,35 +2,37 @@
   "name": "quizRC",
   "version": "0.0.1",
   "dependencies": {
-	"angular-sanitize": "~1.4.7",
-	"angular-messages": "~1.4.7",
-	"jquery": "~2.1.4",
-	"restangular": "~1.5.1",
-	"angular-ui-router": "~0.2.15",
-	"bootstrap-sass": "~3.3.5",
-	"angular-strap": "~2.3.1",
-	"malarkey": "yuanqing/malarkey#~1.3.1",
-	"angular-toastr": "~1.5.0",
-	"moment": "~2.10.6",
-	"angular": "~1.4.7"
+    "angular-sanitize": "~1.4.7",
+    "angular-messages": "~1.4.7",
+    "jquery": "~2.1.4",
+    "restangular": "~1.5.1",
+    "angular-ui-router": "~0.2.15",
+    "bootstrap-sass": "~3.3.5",
+    "angular-strap": "~2.3.1",
+    "malarkey": "yuanqing/malarkey#~1.3.1",
+    "angular-toastr": "~1.5.0",
+    "moment": "~2.10.6",
+    "angular": "~1.4.7",
+    "sockjs": "~0.3.4",
+    "stomp-websocket": "~2.3.4"
   },
   "devDependencies": {
-	"angular-mocks": "~1.4.7"
+    "angular-mocks": "~1.4.7"
   },
   "overrides": {
-	"bootstrap-sass": {
-	  "main": [
-		"assets/stylesheets/_bootstrap.scss",
-		"assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
-		"assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
-		"assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
-		"assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
-		"assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
-	  ]
-	}
+    "bootstrap-sass": {
+      "main": [
+        "assets/stylesheets/_bootstrap.scss",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    }
   },
   "resolutions": {
-	"jquery": "~2.1.4",
-	"angular": "~1.4.7"
+    "jquery": "~2.1.4",
+    "angular": "~1.4.7"
   }
 }
